@@ -28,3 +28,6 @@ Changes in version 1.3.x
 + bugfix: makeTreeSEFromPseq -- orientation of assay is taken into account
 + bugfix: getExperimentCrossCorrelation's "matrix"" mode works with features named equally
 + bugfix: getExperimentCrossCorrelation's calculates correlations correctly with features named equally
++ getExperimentCrossCorrelation name changed to getExperimentCrossAssociation
++ getExperimentCrossAssociation: user's own function supported, sort in mode == table enabled
++ getExperimentCrossAssociation: added MARGIN & paired options, efficiency of algorithm improved
